20240401 新增電子報頁面、mp、cp頁調整

--- a/cp.htm
+++ b/cp.htm
@@ -196,7 +196,7 @@
           </div>
           <!-- 主要內容區 -->
           <div class="center_block">
-            <h2 class="title">公告內容</h2>
+            <h2 class="title">3D列印技術 帶動高端醫材創新</h2>
             <!-- function_panel -->
             <div class="function_panel">
               <!-- function功能區塊 start-->
@@ -246,12 +246,12 @@
             <!-- CP Start -->
             <section class="cp">
               <!-- category -->
-              <div class="category">
+              <!-- <div class="category">
                 <ul>
                   <li><a href="#" class="active">中文法規</a></li>
                   <li><a href="#">英文法規</a></li>
                 </ul>
-              </div>
+              </div> -->
               <!-- category end-->
               <ul class="publish_info">
                 <li>發文/公佈日期：113年01月11日</li>
@@ -259,19 +259,69 @@
                 <li>分類：藥政管理</li>
                 <li>文件類別：函</li>
               </ul>
-              <p>
-                主旨：<br />
-                「植物藥新藥查驗登記審查基準」業經本部113年1月11日衛授食字第1121413324號公告修正，請查照並轉知所屬會員。
-              </p>
-              <p>
-                依據：<br />
-                「植物藥新藥查驗登記審查基準」業經本部113年1月11日衛授食字第1121413324號公告修正，請查照並轉知所屬會員。
-              </p>
-              <p>
-                說明：<br />
-                「植物藥新藥查驗登記審查基準」業經本部113年1月11日衛授食字第1121413324號公告修正，請查照並轉知所屬會員。
-              </p>
+              <dl>
+                <dt>主旨：</dt>
+                <dd>有關羊膜異體移植物基質(羊膜注射劑型)產品之管理規範，請查照並轉知所屬會員、所轄藥商與醫療機構依循辦理。</dd>
+                <dt>依據：</dt>
+                <dd>「詳如說明段落內容。」</dd>
+                <dt>說明：</dt>
+                <dd>
+                  <p>
+                    一、為強化羊膜異體移植物基質(羊膜注射劑型)產品之管理，並鑒於國際間針對該類產品之管理方式不同，本部採分階段推動強化管理措施。 二、分階段強化管理措施如下：<br />
+                    (一)於全球首張十大醫藥先進國藥品(生物製劑)許可證核准前，給予緩衝期，羊膜異體移植物基質(羊膜注射劑型)產品比照人體組織物管理，應符合人體器官保存庫管理辦法。 (二)緩衝期之後，羊膜異體移植物基質產品需申請生物藥品查驗登記，未取得藥品許可證，不得製造或輸入。<br />
+                    (三)建議業者於緩衝期間於國內執行臨床試驗，並注意藥品查驗登記相關規定，如有藥品臨床試驗及查驗登記相關技術性問題，可向財團法人醫藥品查驗中心申請諮詢輔導。<br />
+                    三、有關羊膜異體移植物基質產品之臨床使用，須經醫師專業判斷後施行，且不得以不當之內容廣告，違者依藥事法第69條及醫療法第86條規定處辦。
+                  </p>
+                </dd>
+              </dl>
 
+              <!-- file download 檔案下載 -->
+              <div class="file_download">
+                <h3>附件下載</h3>
+                <ul>
+                  <li>
+                    <span class="file_name">研習課程報名表（doc, docx）</span>
+                    <span class="file_doc"><a href="xxxx.doc">doc</a>823.8 KB</span>
+                    <span class="file_docx"><a href="xxx.docx">docx</a>823.8 KB</span>
+                    <!-- <span class="file_odt"><a href="xxxx.odt">odt</a>823.8 KB</span> -->
+                  </li>
+                  <li>
+                    <span class="file_name">研習課程報名表（odt格式轉換）</span>
+                    <span class="file_odt"><a href="xxxx.odt">odt</a>823.8 KB</span>
+                    <!-- <span class="file_xls"><a href="xxxx.xls">xls</a>823.8 KB</span>
+                    <span class="file_xlsx"><a href="xxxx.xlsx">xlsx</a>823.8 KB</span>
+                    <span class="file_csv"><a href="xxxx.csv">csv</a>823.8 KB</span>
+                    <span class="file_ods"><a href="xxxx.ods">ods</a>823.8 KB</span> -->
+                  </li>
+                  <li>
+                    <span class="file_name">課程內容簡介（PDF）</span>
+                    <span class="file_pdf"><a href="xxxx.pdf">pdf</a>823.8 KB</span>
+                    <!-- <span class="file_pptx"><a href="xxxx.pptx">pptx</a>823.8 KB，下載 1,489 次</span>
+                    <span class="file_odp"><a href="xxxx.odp">odp</a>823.8 KB，下載 1,489 次</span> -->
+                  </li>
+                  <li>
+                    <span class="file_name">檔案名稱</span>
+                    <span class="file_pdf"><a href="xxxx.pdf">pdf</a>823.8 KB</span>
+                    <span class="file_zip"><a href="xxxx.zip">zip</a>823.8 KB</span>
+                    <span class="file_txt"><a href="xxxx.txt">txt</a>823.8 KB</span>
+                    <span class="file_mov"><a href="xxxx.mov">mov</a>823.8 KB</span>
+                    <span class="file_mp3"><a href="xxxx.mp3">mp3</a>823.8 KB</span>
+                    <span class="file_jpg"><a href="xxxx.jpg">jpg</a>823.8 KB</span>
+                    <span class="file_wmv"><a href="xxxx.wmv">wmv</a>823.8 KB</span>
+                    <span class="file_mp4"><a href="xxxx.mp4">mp4</a>823.8 KB</span>
+                  </li>
+                </ul>
+              </div>
+              <!-- file download 檔案下載 -->
+              <div class="file_download">
+                <h3>公告影像檔</h3>
+                <ul>
+                  <li>
+                    <span class="file_name">1131400002_附件.pdf</span>
+                    <span class="file_pdf"><a href="xxxx.pdf">pdf</a>823.8 KB</span>
+                  </li>
+                </ul>
+              </div>
               <!-- weblink 外部連結 -->
               <div class="web_link2">
                 <h3>相關公告連結</h3>
@@ -299,16 +349,6 @@
                   </div>
                 </div>
                 <!-- 圖文列表 end -->
-              </div>
-              <!-- file download 檔案下載 -->
-              <div class="file_download">
-                <h3>公告影像檔</h3>
-                <ul>
-                  <li>
-                    <span class="file_name">1131400002_附件.pdf</span>
-                    <span class="file_pdf"><a href="xxxx.pdf">pdf</a>823.8 KB</span>
-                  </li>
-                </ul>
               </div>
             </section>
             <!-- CP End -->
