--- a/cp3.htm
+++ b/cp3.htm
@@ -245,12 +245,12 @@
             <!-- CP Start -->
             <section class="cp">
               <!-- category -->
-              <div class="category">
+              <!-- <div class="category">
                 <ul>
                   <li><a href="#" class="active">中文法規</a></li>
                   <li><a href="#">英文法規</a></li>
                 </ul>
-              </div>
+              </div> -->
               <!-- category end-->
               <ul class="publish_info">
                 <li>法規類別：法規</li>
