--- a/cp_all.htm
+++ b/cp_all.htm
@@ -246,12 +246,12 @@
             <!-- CP Start -->
             <section class="cp">
               <!-- category -->
-              <div class="category">
+              <!-- <div class="category">
                 <ul>
                   <li><a href="#" class="active">中文法規</a></li>
                   <li><a href="#">英文法規</a></li>
                 </ul>
-              </div>
+              </div> -->
               <!-- category end-->
               <ul class="publish_info">
                 <li>發文/公佈日期：2023-11-13</li>
