--- a/epaper.htm
+++ b/epaper.htm
@@ -97,7 +97,7 @@
                                         <table width="100%" border="0" cellspacing="0" cellpadding="0" style="border-collapse: collapse">
                                           <tr>
                                             <td width="13" align="left"><img src="images/title_icon.gif" width="13" height="25" /></td>
-                                            <td align="left" style="font-size: 1.8rem; font-weight: bold" width="200">最新法規資訊</td>
+                                            <td align="left" style="font-size: 1.8rem; font-weight: bold" width="150">最新資訊</td>
                                             <td align="left" style="border-bottom: 3px solid #f39852">&nbsp;</td>
                                           </tr>
                                         </table>
