--- a/index.htm
+++ b/index.htm
@@ -183,6 +183,11 @@
             </tr>
             <tr>
               <td></td>
+              <td>電子報2</td>
+              <td><a href="epaper2.htm"></a></td>
+            </tr>
+            <tr>
+              <td></td>
               <td>網站地圖</td>
               <td><a href="sitemap.htm"></a></td>
             </tr>
