--- a/mp.htm
+++ b/mp.htm
@@ -147,11 +147,11 @@
           </div>
         </section>
         <!-- 綜合查詢 end-->
-        <!-- 最新法規資訊 -->
+        <!-- 最新資訊 -->
         <section class="col-12">
           <div class="container">
             <div class="col">
-              <h2 class="c_titleBox">最新法規資訊</h2>
+              <h2 class="c_titleBox">最新資訊</h2>
               <div class="c_news mp_newsBlock wow fadeInDown" data-wow-duration="1s" data-wow-delay="0s">
                 <div class="tabSet">
                   <div class="tabItems">
@@ -288,7 +288,7 @@
             </div>
           </div>
         </section>
-        <!-- 最新法規資訊 end-->
+        <!-- 最新資訊 end-->
 
         <!--  訂閱電子報 -->
         <section class="col-12 sub_epaperBlock">
