--- a/epaper.htm
+++ b/epaper.htm
@@ -32,15 +32,12 @@
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                   <tr>
                     <td width="19" bgcolor="#0d50aa">&nbsp;</td>
-                    <td width="187" height="86">
-                      <a href="#"><img src="images/logo.png" width="300" border="0" /></a>
+                    <td width="auto" height="60" align="center">
+                      <a href="#" style="display: block; margin: 15px 0 0 130px"><img src="images/logo.png" width="300" border="0" /></a>
                     </td>
-                    <td></td>
-                    <td width="120" height="86" align="center" bgcolor="#0d50aa" style="color: #fff; font-size: 1.25rem">
-                      <strong
-                        >03月份<br />
-                        2024</strong
-                      >
+                    <!-- <td></td> -->
+                    <td width="120" height="60" align="center" bgcolor="#0d50aa" style="color: #fff; font-size: 1.25rem">
+                      <strong> 2024/04/03</strong>
                     </td>
                     <td width="18" bgcolor="#0d50aa">&nbsp;</td>
                   </tr>
@@ -211,9 +208,8 @@
             <tr>
               <td align="center" bgcolor="#0d50aa" style="font-size: 0.875rem; color: #fff">
                 <p>
-                  版權所有 © 財團法人醫藥品查驗中心 網站瀏覽人次：99999<br />
+                  版權所有 © 財團法人醫藥品查驗中心<br />
                   地址：台北市南港區11557忠孝東路六段465號3樓<br />
-                  本網站支援IE、Firefox及Chrome，最佳瀏覽解析度為1024x768以上
                 </p>
               </td>
             </tr>
