--- a/epaper2.htm
+++ b/epaper2.htm
@@ -32,15 +32,12 @@
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                   <tr>
                     <td width="19" bgcolor="#0EA49D">&nbsp;</td>
-                    <td width="187" height="86">
-                      <a href="#"><img src="images/logo.png" width="300" border="0" /></a>
+                    <td width="auto" height="60" align="center">
+                      <a href="#" style="display: block; margin: 15px 0 0 130px"><img src="images/logo.png" width="300" border="0" /></a>
                     </td>
-                    <td></td>
-                    <td width="120" height="86" align="center" bgcolor="#0EA49D" style="color: #fff; font-size: 1.25rem">
-                      <strong
-                        >03月份<br />
-                        2024</strong
-                      >
+                    <!-- <td></td> -->
+                    <td width="120" height="60" align="center" bgcolor="#0EA49D" style="color: #fff; font-size: 1.25rem">
+                      <strong> 2024/04/03</strong>
                     </td>
                     <td width="18" bgcolor="#0EA49D">&nbsp;</td>
                   </tr>
@@ -104,28 +101,28 @@
                                         <br />
                                         <table width="100%" border="0" cellspacing="0" cellpadding="0" style="border-collapse: collapse; font-size: 0.938rem">
                                           <tr>
-                                            <th width="30%" style="color: #333; border: 1px solid #ddd; padding: 10px; background-color: #f5f8f8; vertical-align: top" align="right">文件分類</th>
-                                            <td width="70%" valign="top" style="color: #333; border: 1px solid #ddd; padding: 10px">函</td>
+                                            <th width="15%" style="color: #333; border: 1px solid #ddd; padding: 10px; background-color: #f5f8f8; vertical-align: top" align="right">文件分類</th>
+                                            <td width="85%" valign="top" style="color: #333; border: 1px solid #ddd; padding: 10px">函</td>
                                           </tr>
                                           <tr>
-                                            <th width="30%" style="color: #333; border: 1px solid #ddd; padding: 10px; background-color: #f5f8f8; vertical-align: top" align="right">發文日期</th>
-                                            <td width="70%" valign="top" style="color: #333; border: 1px solid #ddd; padding: 10px">113年03月19日</td>
+                                            <th width="15%" style="color: #333; border: 1px solid #ddd; padding: 10px; background-color: #f5f8f8; vertical-align: top" align="right">發文日期</th>
+                                            <td width="85%" valign="top" style="color: #333; border: 1px solid #ddd; padding: 10px">113年03月19日</td>
                                           </tr>
                                           <tr>
-                                            <th width="30%" style="color: #333; border: 1px solid #ddd; padding: 10px; background-color: #f5f8f8; vertical-align: top" align="right">發佈文號</th>
-                                            <td width="70%" valign="top" style="color: #333; border: 1px solid #ddd; padding: 10px">FDA藥字第1041411951號</td>
+                                            <th width="15%" style="color: #333; border: 1px solid #ddd; padding: 10px; background-color: #f5f8f8; vertical-align: top" align="right">發佈文號</th>
+                                            <td width="85%" valign="top" style="color: #333; border: 1px solid #ddd; padding: 10px">FDA藥字第1041411951號</td>
                                           </tr>
                                           <tr>
-                                            <th width="30%" style="color: #333; border: 1px solid #ddd; padding: 10px; background-color: #f5f8f8; vertical-align: top" align="right">主旨</th>
-                                            <td width="70%" valign="top" style="color: #333; border: 1px solid #ddd; padding: 10px">有關本署公告修正「流感病毒抗原快篩檢測系統技術基準」及「新型冠狀病毒抗原檢驗試劑技術基準」案，請查照並轉知所屬會員知悉參辦。</td>
+                                            <th width="15%" style="color: #333; border: 1px solid #ddd; padding: 10px; background-color: #f5f8f8; vertical-align: top" align="right">主旨</th>
+                                            <td width="85%" valign="top" style="color: #333; border: 1px solid #ddd; padding: 10px">有關本署公告修正「流感病毒抗原快篩檢測系統技術基準」及「新型冠狀病毒抗原檢驗試劑技術基準」案，請查照並轉知所屬會員知悉參辦。</td>
                                           </tr>
                                           <tr>
-                                            <th width="30%" style="color: #333; border: 1px solid #ddd; padding: 10px; background-color: #f5f8f8; vertical-align: top" align="right">依據</th>
-                                            <td width="70%" valign="top" style="color: #333; border: 1px solid #ddd; padding: 10px">「詳如來文說明(或詳如說明段)」</td>
+                                            <th width="15%" style="color: #333; border: 1px solid #ddd; padding: 10px; background-color: #f5f8f8; vertical-align: top" align="right">依據</th>
+                                            <td width="85%" valign="top" style="color: #333; border: 1px solid #ddd; padding: 10px">「詳如來文說明(或詳如說明段)」</td>
                                           </tr>
                                           <tr>
-                                            <th width="30%" style="color: #333; border: 1px solid #ddd; padding: 10px; background-color: #f5f8f8; vertical-align: top" align="right">說明</th>
-                                            <td width="70%" valign="top" style="color: #333; border: 1px solid #ddd; padding: 10px">
+                                            <th width="15%" style="color: #333; border: 1px solid #ddd; padding: 10px; background-color: #f5f8f8; vertical-align: top" align="right">說明</th>
+                                            <td width="85%" valign="top" style="color: #333; border: 1px solid #ddd; padding: 10px">
                                               一、為加強體外診斷醫療器材之安全及效能，本署公告修正「流感病毒抗原快篩檢測系統技術基準」及「新型冠狀病毒抗原檢驗試劑技術基準」2項醫療器材技術基準，提供廠商作為產品研發及申請查驗登記資料準備之參考。<br />
                                               二、另為確保流感病毒抗原快篩檢驗試劑及新型冠狀病毒抗原檢驗試劑檢驗病毒變異株之能力，對於已取得是類產品許可證者，自即日起，應建立產品檢測變異株之風險評估計畫，並依計畫確實執行，評估方式可參考基準內容擬定。後續是類產品許可證申請許可證變更或展延時，應依醫療器材許可證核發與登錄及年度申報準則第13條附表四「應檢附文件、資料項目20」，及第17條第1項第6款「其他經中央主管機關指定之文件、資料」規定，檢附變異株評估計畫書，始予以同意變更或展延。
                                               <br />
@@ -187,9 +184,8 @@
             <tr>
               <td align="center" bgcolor="#0EA49D" style="font-size: 0.875rem; color: #fff">
                 <p>
-                  版權所有 © 財團法人醫藥品查驗中心 網站瀏覽人次：99999<br />
-                  地址：台北市南港區11557忠孝東路六段465號3樓<br />
-                  本網站支援IE、Firefox及Chrome，最佳瀏覽解析度為1024x768以上
+                  版權所有 © 財團法人醫藥品查驗中心<br />
+                  地址：台北市南港區11557忠孝東路六段465號3樓
                 </p>
               </td>
             </tr>
