--- a/epaper2.htm
+++ b/epaper2.htm
@@ -32,12 +32,12 @@
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                   <tr>
                     <td width="19" bgcolor="#0EA49D">&nbsp;</td>
-                    <td width="auto" height="60" align="center">
-                      <a href="#" style="display: block; margin: 15px 0 0 130px"><img src="images/logo.png" width="300" border="0" /></a>
+                    <td width="auto" height="80" align="center">
+                      <a href="#" style="display: block; margin: 20px 0 0 130px"><img src="images/logo.png" width="300" border="0" /></a>
                     </td>
                     <!-- <td></td> -->
-                    <td width="120" height="60" align="center" bgcolor="#0EA49D" style="color: #fff; font-size: 1.25rem">
-                      <strong> 2024/04/03</strong>
+                    <td width="120" height="80" align="center" bgcolor="#0EA49D" style="color: #fff; font-size: 1.25rem">
+                      <strong>4月份<br />2024</strong>
                     </td>
                     <td width="18" bgcolor="#0EA49D">&nbsp;</td>
                   </tr>
