20240409 mp、epaper_form頁修改

--- a/epaper_form.htm
+++ b/epaper_form.htm
@@ -214,6 +214,19 @@
                       </div>
                     </div>
                     <div class="form_grp">
+                      <label for="username" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>身分</label>
+                      <div class="form_content" id="fake-legend">
+                        <div class="radio_grp form_inline">
+                          <label><input type="radio" name="sampleRadio" value="" checked="" />政府機關</label>
+                          <label><input type="radio" name="sampleRadio" value="" />法人研究機構</label>
+                          <label><input type="radio" name="sampleRadio" value="" />業界</label>
+                          <label><input type="radio" name="sampleRadio" value="" />學界</label>
+                          <label><input type="radio" name="sampleRadio" value="" />公協會</label>
+                          <label><input type="radio" name="sampleRadio" value="" />一般民眾</label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="form_grp">
                       <div class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>驗證碼</div>
                       <div class="form_content form_inline">
                         <img src="images/basic/captcha.gif" alt="" class="captcha" />
