--- a/mp.htm
+++ b/mp.htm
@@ -166,7 +166,7 @@
                         <div class="col">
                           <ul>
                             <li>
-                              <a href="cp3.htm" id="">
+                              <a href="cp.htm" id="">
                                 <time>112-09-26</time>
                                 <div class="title">為持續推動藥品電子仿單，本署訂定「藥品採用電子仿單辦理原則」（如附件），自函告日起 ...</div>
                               </a>
