--- a/epaper2.htm
+++ b/epaper2.htm
@@ -37,7 +37,7 @@
                     </td>
                     <!-- <td></td> -->
                     <td width="120" height="80" align="center" bgcolor="#0EA49D" style="color: #fff; font-size: 1.25rem">
-                      <strong>4月份<br />2024</strong>
+                      <strong>2024年<br />4月10日</strong>
                     </td>
                     <td width="18" bgcolor="#0EA49D">&nbsp;</td>
                   </tr>
