20240411 新增轉寄友人、lp_list修改

--- a/fp.htm
+++ b/fp.htm
@@ -130,72 +130,18 @@
         <div class="breadcrumb">
           <ul>
             <li><a href="#">首頁</a></li>
-            <li><a href="#">藥品</a></li>
-            <li>最新法規資訊</li>
+            <li>轉寄友人</li>
           </ul>
         </div>
         <!-- breadcrumb路徑 end-->
         <div class="container">
           <!-- 左側 -->
           <div class="left_block hidden">
-            <div class="leftblock_nodemenu">
-              <div class="title">藥品</div>
-              <ul>
-                <li>
-                  <a href="#">藥品臨床試驗</a>
-                </li>
-                <li>
-                  <a href="#">藥品查驗登記</a>
-                  <!-- <ul>
-                    <li><a href="#">第二層選單</a></li>
-                    <li><a href="#">第二層選單</a></li>
-                  </ul> -->
-                </li>
-                <li>
-                  <a href="#">上市後管理</a>
-                </li>
-                <li>
-                  <a href="#">再生醫療</a>
-                </li>
-                <li>
-                  <a href="#">藥政管理</a>
-                </li>
-                <li>
-                  <a href="#">術接性試驗</a>
-                </li>
-                <li>
-                  <a href="#">BA/BE試驗</a>
-                </li>
-                <li>
-                  <a href="#">依公告仿單變更</a>
-                </li>
-                <li>
-                  <a href="#">安全資訊風險溝通表</a>
-                </li>
-                <li>
-                  <a href="#">學名藥</a>
-                </li>
-                <li>
-                  <a href="#">指示藥品</a>
-                </li>
-                <li>
-                  <a href="#">中草藥</a>
-                </li>
-                <li>
-                  <a href="#">罕見疾病藥品</a>
-                </li>
-                <li>
-                  <a href="#">生物相似性藥品</a>
-                </li>
-                <li>
-                  <a href="#">其他</a>
-                </li>
-              </ul>
-            </div>
+            <div class="leftblock_nodemenu">&nbsp;</div>
           </div>
           <!-- 主要內容區 -->
           <div class="center_block">
-            <h2 class="title">最新法規資訊</h2>
+            <h2 class="title">轉寄友人</h2>
             <!-- function_panel -->
             <div class="function_panel">
               <!-- function功能區塊 start-->
@@ -242,117 +188,61 @@
             </div>
             <!-- function_panel -->
 
-            <!-- LP Start -->
-            <section class="lp">
-              <!-- Pagination -->
-              <div class="pagination">
-                <form action="">
-                  <div class="form_inline">
-                    <div class="total">
-                      共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示
-                      <select name="" id="" aria-label="每頁顯示">
-                        <option value="">10</option>
-                        <option value="">20</option>
-                        <option value="">30</option>
-                        <option value="">40</option>
-                      </select>
-                      筆， <input type="button" value="確定" class="btn btn-submit" />
+            <!-- FP Start -->
+            <section class="fp">
+              <p>註:<abbr class="necessary" title="“為必填(選)欄位,不能為空白。“">*</abbr>為必填(選)欄位, 不能為空白。</p>
+              <form action="">
+                <div class="form_grid flex-form">
+                  <div class="form_grp">
+                    <label for="youremail" class="form_title"><abbr class="necessary" title="“為必填(選)欄位,不能為空白。“">*</abbr>寄件人姓名：</label>
+                    <div class="form_content">
+                      <input type="text" id="yourname" value="請輸入寄件人姓名" />
                     </div>
                   </div>
-                </form>
-                <ul class="page">
-                  <li class="first"><a href="#" title="第一頁">第一頁 </a></li>
-                  <li class="prev"><a href="#" title="回上一頁">回上一頁 </a></li>
-                  <li class="active"><a href="#">1</a></li>
-                  <li><a href="#">2</a></li>
-                  <li><a href="#">3</a></li>
-                  <li><a href="#">4</a></li>
-                  <li><a href="#">5</a></li>
-                  <li><a href="#">6</a></li>
-                  <li><a href="#">7</a></li>
-                  <li><a href="#">8</a></li>
-                  <li><a href="#">9</a></li>
-                  <li><a href="#">10</a></li>
-                  <li class="next"><a href="#" title="下一頁">下一頁 </a></li>
-                  <li class="last"><a href="#" title="最後一頁">最後一頁</a></li>
-                </ul>
-              </div>
-              <!-- Pagination end-->
-              <!-- 文字列表 -->
-              <div class="list">
-                <ul>
-                  <li>
-                    <a href="cp3.htm">
-                      <span class="num">1</span><span class="title">為持續推動藥品電子仿單，本署訂定「藥品採用電子仿單辦理原則」（如附件），自函告日起施行，請查照並轉知所屬會員。<em class="new">最新</em></span
-                      ><time>113-01-17</time>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="cp3.htm"> <span class="num">2</span><span class="title">函知「植物藥新藥查驗登記審查基準」修訂草案，惠請貴會協助轉知所屬會員，如有修正意見者，請於文到60日內來函陳述，請查照。</span><time>113-01-17</time> </a>
-                  </li>
-                  <li>
-                    <a href="#"> <span class="num">3</span><span class="title">有關公告修訂「生體相等性試驗之受託研究機構管理規範」一案，請至本署網站之「公告資訊」下載，請查照並轉知所屬會員及相關單位。</span><time>113-01-17</time> </a>
-                  </li>
-                  <li>
-                    <a href="#"> <span class="num">4</span><span class="title">針對長期專案進口或供應不穩之藥品，為鼓勵業者申請藥品許可證，請轉知所屬會員，詳如說明段，請查照。</span><time>113-01-17</time> </a>
-                  </li>
-                  <li>
-                    <a href="#"> <span class="num">5</span><span class="title">關於「人工智慧/機器學習技術之電腦輔助偵測及電腦輔助診斷(CADx)醫療器材查驗登記技術指引」業經食藥署於112年9月14日FDA器字第1121607549號公告修正。</span><time>113-01-17</time> </a>
-                  </li>
-                  <li>
-                    <a href="#"> <span class="num">6</span><span class="title">為持續推動藥品電子仿單，本署訂定「藥品採用電子仿單辦理原則」（如附件），自函告日起施行，請查照並轉知所屬會員。</span><time>113-01-17</time> </a>
-                  </li>
-                  <li>
-                    <a href="#"> <span class="num">7</span><span class="title">函知「植物藥新藥查驗登記審查基準」修訂草案，惠請貴會協助轉知所屬會員，如有修正意見者，請於文到60日內來函陳述，請查照。</span><time>113-01-17</time> </a>
-                  </li>
-                  <li>
-                    <a href="#"> <span class="num">8</span><span class="title">有關公告修訂「生體相等性試驗之受託研究機構管理規範」一案，請至本署網站之「公告資訊」下載，請查照並轉知所屬會員及相關單位。</span><time>113-01-17</time> </a>
-                  </li>
-                  <li>
-                    <a href="#"> <span class="num">9</span><span class="title">針對長期專案進口或供應不穩之藥品，為鼓勵業者申請藥品許可證，請轉知所屬會員，詳如說明段，請查照。</span><time>113-01-17</time> </a>
-                  </li>
-                  <li>
-                    <a href="#"> <span class="num">10</span><span class="title">關於「人工智慧/機器學習技術之電腦輔助偵測及電腦輔助診斷(CADx)醫療器材查驗登記技術指引」業經食藥署於112年9月14日FDA器字第1121607549號公告修正。</span><time>113-01-17</time> </a>
-                  </li>
-                </ul>
-              </div>
-              <!-- 文字列表 end -->
-              <!-- Pagination -->
-              <div class="pagination">
-                <form action="">
-                  <div class="form_inline">
-                    <div class="total">
-                      共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示
-                      <select name="" id="" aria-label="每頁顯示">
-                        <option value="">10</option>
-                        <option value="">20</option>
-                        <option value="">30</option>
-                        <option value="">40</option>
-                      </select>
-                      筆， <input type="button" value="確定" class="btn btn-submit" />
+                  <div class="form_grp">
+                    <label for="recipient_email" class="form_title"><abbr class="necessary" title="“為必填(選)欄位,不能為空白。“">*</abbr>寄件人E-mail：</label>
+                    <div class="form_content">
+                      <input name="" id="recipient_email" type="text" value="請輸入寄件人E-mail" />
+                      <div class="notice_info">(例如：adc@gmail.com)</div>
                     </div>
                   </div>
-                </form>
-                <ul class="page">
-                  <li class="first"><a href="#" title="第一頁">第一頁 </a></li>
-                  <li class="prev"><a href="#" title="回上一頁">回上一頁 </a></li>
-                  <li class="active"><a href="#">1</a></li>
-                  <li><a href="#">2</a></li>
-                  <li><a href="#">3</a></li>
-                  <li><a href="#">4</a></li>
-                  <li><a href="#">5</a></li>
-                  <li><a href="#">6</a></li>
-                  <li><a href="#">7</a></li>
-                  <li><a href="#">8</a></li>
-                  <li><a href="#">9</a></li>
-                  <li><a href="#">10</a></li>
-                  <li class="next"><a href="#" title="下一頁">下一頁 </a></li>
-                  <li class="last"><a href="#" title="最後一頁">最後一頁</a></li>
-                </ul>
-              </div>
-              <!-- Pagination end-->
+                  <div class="form_grp">
+                    <label for="recipient_email" class="form_title"><abbr class="necessary" title="“為必填(選)欄位,不能為空白。“">*</abbr>收件者E-mail：</label>
+                    <div class="form_content">
+                      <input name="" id="recipient_email" type="text" value="請輸入收件者E-mail，多個帳號請用 ; 隔開。" />
+                      <div class="notice_info">(例如：adc@gmail.com)</div>
+                    </div>
+                  </div>
+                  <div class="form_grp">
+                    <label for="contents" class="form_title"><abbr class="necessary" title="“為必填(選)欄位,不能為空白。“">*</abbr>給朋友的話：</label>
+                    <div class="form_content">
+                      <textarea name="" id="contents" cols="30" rows="70">
+您好：
+您的朋友由醫藥品查驗中心-藥品官網轉寄一篇「【行政/法規】目前執行臨床試驗是否需要提交定期安全性報告（DSUR）給TFDA？」文章給您
+文章連結如下：https://cde.hywebj00.com.tw/1372/2974/3960/3967/normalPost</textarea
+                      >
+                    </div>
+                  </div>
+                  <div class="form_grp">
+                    <label class="form_title" for="verification"><abbr class="necessary" title="“為必填(選)欄位,不能為空白。“">*</abbr>驗證碼：</label>
+                    <div class="form_content">
+                      <img src="images/basic/captcha.gif" alt="" class="captcha" />
+                      <input type="text" id="verification" value="" />
+                      <button class="btn"><i class="i_play"></i>語音播放</button>
+                      <button class="btn">驗證碼,另開視窗</button>
+                      <div class="notice_error">
+                        您輸入的驗證碼錯誤 <a href="javascript:;" class="close"><img src="images/basic/icon_close.svg" alt="關閉" /></a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="btn_grp form_inline">
+                    <input name="" type="reset" value="清除" class="btn btn-reset" />
+                    <input name="" type="submit" value="送出" class="btn btn-submit" />
+                  </div>
+                </div>
+              </form>
             </section>
-            <!-- LP End -->
+            <!-- FP End -->
           </div>
         </div>
       </div>
