--- a/index.htm
+++ b/index.htm
@@ -196,6 +196,11 @@
               <td>404 網站錯誤</td>
               <td><a href="404.htm"></a></td>
             </tr>
+            <tr>
+              <td></td>
+              <td>轉寄友人</td>
+              <td><a href="fp.htm"></a></td>
+            </tr>
           </tbody>
         </table>
       </div>
