--- a/lp.htm
+++ b/lp.htm
@@ -298,7 +298,7 @@
                       <li><span class="th_title">公布日期：</span><span>2023-11-13</span></li>
                       <li><span class="th_title">次分類：</span><span><em class="tag">藥政管理</em></span></li>
                       <li><span class="th_title">文號：</span><span>衛授食字第1121411949號</span></li>
-                      <li><span class="th_title">主旨：</span>修正「藥物回收處理辦法」，名稱並修正為「藥品回收處理辦法」及修正「藥事法施行細則」第三十七條，業經本部於中華民國112年10月20日以衛授食字第1121410884號及衛授食字第1121410885號令修正發布，請查照(並轉知所屬)。</span></li>
+                      <li><span class="th_title">主旨：</span>使用電子健康照護資料執行藥品流行病學安全性研究指引(草案)</span></li>
                     </ul>
                   </div>
                    <!-- doc_release end-->
