--- a/epaper.htm
+++ b/epaper.htm
@@ -102,40 +102,40 @@
                                         <table width="100%" border="0" cellspacing="0" cellpadding="0" style="border-collapse: collapse; font-size: 0.938rem">
                                           <tr>
                                             <th width="80" style="color: #333; border: 1px solid #ddd; padding: 5px; background-color: #f5f8f8">日期</th>
-                                            <th width="180" style="color: #333; border: 1px solid #ddd; padding: 5px; background-color: #f5f8f8">文號</th>
+                                            <th width="220" style="color: #333; border: 1px solid #ddd; padding: 5px; background-color: #f5f8f8">文號</th>
                                             <th style="color: #333; border: 1px solid #ddd; padding: 5px; background-color: #f5f8f8">主旨</th>
                                           </tr>
                                           <tr>
                                             <td width="80" valign="top" align="center" style="color: #333; border: 1px solid #ddd; padding: 12px 5px">112/09/26</td>
-                                            <td width="180" valign="top" align="center" style="color: #333; border: 1px solid #ddd; padding: 12px 5px">FDA藥字第1041411951號</td>
+                                            <td width="220" valign="top" align="center" style="color: #333; border: 1px solid #ddd; padding: 12px 5px">FDA器字第1131600723A號</td>
                                             <td valign="top" align="left" style="border: 1px solid #ddd; padding: 10px 5px; color: #333">
                                               <a href="#" style="color: #333; text-decoration: none; display: block">為持續推動藥品電子仿單，本署訂定「藥品採用電子仿單辦理原則」（如附件），自函告日起施行，請查照並轉知所屬會員。</a>
                                             </td>
                                           </tr>
                                           <tr>
                                             <td width="80" valign="top" align="center" style="color: #333; border: 1px solid #ddd; padding: 12px 5px">112/09/26</td>
-                                            <td width="180" valign="top" align="center" style="color: #333; border: 1px solid #ddd; padding: 12px 5px">FDA藥字第1041411951號</td>
+                                            <td width="220" valign="top" align="center" style="color: #333; border: 1px solid #ddd; padding: 12px 5px">FDA器字第1131600723A號</td>
                                             <td valign="top" align="left" style="border: 1px solid #ddd; padding: 10px 5px; color: #333">
                                               <a href="#" style="color: #333; text-decoration: none; display: block">函知「植物藥新藥查驗登記審查基準」修訂草案，惠請貴會協助轉知所屬會員，如有修正意見者，請於文到60日內來函陳述，請查照。</a>
                                             </td>
                                           </tr>
                                           <tr>
                                             <td width="80" valign="top" align="center" style="color: #333; border: 1px solid #ddd; padding: 12px 5px">112/09/26</td>
-                                            <td width="180" valign="top" align="center" style="color: #333; border: 1px solid #ddd; padding: 12px 5px">FDA藥字第1041411951號</td>
+                                            <td width="220" valign="top" align="center" style="color: #333; border: 1px solid #ddd; padding: 12px 5px">FDA器字第1131600723A號</td>
                                             <td valign="top" align="left" style="border: 1px solid #ddd; padding: 10px 5px; color: #333">
                                               <a href="#" style="color: #333; text-decoration: none; display: block">有關公告修訂「生體相等性試驗之受託研究機構管理規範」一案，請至本署網站之「公告資訊」下載，請查照並轉知所屬會員及相關單位。</a>
                                             </td>
                                           </tr>
                                           <tr>
                                             <td width="80" valign="top" align="center" style="color: #333; border: 1px solid #ddd; padding: 12px 5px">112/09/26</td>
-                                            <td width="180" valign="top" align="center" style="color: #333; border: 1px solid #ddd; padding: 12px 5px">FDA藥字第1041411951號</td>
+                                            <td width="220" valign="top" align="center" style="color: #333; border: 1px solid #ddd; padding: 12px 5px">FDA器字第1131600723A號</td>
                                             <td valign="top" align="left" style="border: 1px solid #ddd; padding: 10px 5px; color: #333">
                                               <a href="#" style="color: #333; text-decoration: none; display: block">針對長期專案進口或供應不穩之藥品，為鼓勵業者申請藥品許可證，請轉知所屬會員，詳如說明段，請查照。</a>
                                             </td>
                                           </tr>
                                           <tr>
                                             <td width="80" valign="top" align="center" style="color: #333; border: 1px solid #ddd; padding: 12px 5px">112/09/26</td>
-                                            <td width="180" valign="top" align="center" style="color: #333; border: 1px solid #ddd; padding: 12px 5px">FDA藥字第1041411951號</td>
+                                            <td width="220" valign="top" align="center" style="color: #333; border: 1px solid #ddd; padding: 12px 5px">FDA器字第1131600723A號</td>
                                             <td valign="top" align="left" style="border: 1px solid #ddd; padding: 10px 5px; color: #333">
                                               <a href="#" style="color: #333; text-decoration: none; display: block">關於「人工智慧/機器學習技術之電腦輔助偵測(CADe)及電腦輔助診斷(CADx)醫療器材查驗登記技術指引」業經食藥署於112年9月14日FDA器字第1121607549號公告修正。</a>
                                             </td>
