--- a/mp_all.htm
+++ b/mp_all.htm
@@ -133,8 +133,8 @@
         <section class="mp_searchblock">
           <div class="container wow fadeInUp" data-wow-duration="1s" data-wow-delay="0s">
             <div class="col">
-              <!-- Search Start -->
-              <div class="search" role="search">
+              <!-- Search2 Start -->
+              <div class="search2" role="search">
                 <div class="form_grp">
                   <label for="mustSameAsId">綜合查詢</label>
                   <input name="username" id="mustSameAsId" type="text" placeholder="請輸入關鍵字" accesskey="S" title="請輸入文字" aria-label="搜尋網站內容" class="txtinput" />
@@ -142,7 +142,7 @@
                   <input name="" type="submit" value="進階查詢" class="btn btn-search" />
                 </div>
               </div>
-              <!-- Search end -->
+              <!-- Search2 end -->
             </div>
           </div>
         </section>
